--- a/custom_behingoz/views/report_invoice.xml
+++ b/custom_behingoz/views/report_invoice.xml
@@ -19,7 +19,7 @@
                 <span t-if="o.type == 'out_invoice' and o.state == 'cancel'">Factura Cancelada</span>
                 <span t-if="o.type == 'out_refund'">Refund</span>
                 <span t-if="o.type == 'in_refund'">Supplier Refund</span>
-                <span t-if="o.type == 'in_invoice'">Supplier Invoice</span>
+                <span t-if="o.type == 'in_invoice'">Proveedor Factura</span>
                 <span t-field="o.number"/>
             </h2>
 
@@ -126,6 +126,30 @@
                     </table>
                 </div>
             </div>
+
+
+           <div class="row" t-if="o.move_id.line_id">
+                <div class="col-xs-6">
+                    <table class="table table-condensed">
+                        <thead>
+                            <tr>
+                                <th>Vencimientos</th>
+                                <th class="text-right">Importe</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr t-foreach="o.move_id.line_id" t-as="p">
+                                <td t-if="p.debit != 0"><span t-field="p.date_maturity"/></td>
+                                <td t-if="p.debit != 0" class="text-right">
+                                    <span t-field="p.debit"
+                                        t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
 
             <p t-if="o.comment">
                 <strong>Comentarios:</strong>
