Modificaciones de seguridad y correcciones

--- a/custom_behingoz/views/report_invoice.xml
+++ b/custom_behingoz/views/report_invoice.xml
@@ -128,7 +128,7 @@
             </div>
 
 
-           <div class="row" t-if="o.move_id.line_id">
+           <div class="row" t-if="o.move_id.line_id and o.type=='out_invoice'">
                 <div class="col-xs-6">
                     <table class="table table-condensed">
                         <thead>
