--- a/custom_behingoz/views/report_saleorder.xml
+++ b/custom_behingoz/views/report_saleorder.xml
@@ -126,7 +126,9 @@
             </div>
 
             <p t-field="o.note" />
-            <h3 style="color:red;">*Consigue un eco-pack, por cada 200 eco-puntos </h3>
+            <p t-if="o.company_id.message_report">
+                <span t-field="o.company_id.message_report"/>
+            </p>
             <div class="oe_structure"/>
         </div>
     </t>
